src/global/app.css
/*
  Global App CSS
  ----------------------
  Use this file for styles that should be applied to all components.
  For example, "font-family" within the "body" selector is a CSS property
  most apps will want applied to all components.

  Any global CSS variables should also be applied here.
*/
@import url('https://fonts.googleapis.com/css?family=Yantramanav&display=swap');

html,
body {
  min-height: 100vh;
}

:root {
  --color-1: #474e5d;
  --color-2: #fff;
  --color-3: #232634;

  --color-game-stat-even-item: #AB9C99;
  --color-game-stat-odd-item: #BEAFAC;

  --timeline-width: 2px;

  --container-padding: 10px;
  --container-width: 20px;
  --container-border: 4px;

  --tabs-height: 50px;

  --scrore-board-height: 80px;

  --background-color-1: rgba(1, 62, 85, 1);
  --background-color-2: rgba(2, 19, 33, 1);
  --background-color-3: #04667a;

  --background-color-4: rgba(0, 36, 57, 1);
  --background-color-5: rgba(0, 6, 13, 1);

  --background-color-6: rgba(0, 30, 51, 1);
  --background-color-7: #003351;
}

body {
  background-color: green;
  margin: 0;
  padding: 0;
  font-family: 'Yantramanav', sans-serif;
}

vff-sport-fan {
  height: 70vh;
  bottom: -30vh;
}

vff-tabs {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: var(--tabs-height);
  z-index: 100;
}

@media (orientation: landscape) and (max-width: 1024px) {
  vff-sport-fan {
    top: 0;
  }

  vff-tabs,
  vff-sport-fan {
    transition: left 300ms ease-out;
    width: 50Vw;
    left: -100vw;
  }

  .show vff-tabs,
  vff-sport-fan.show {
    left: 0;
  }
}

